fix z-index in sorts component

--- a/src/components/sort/sort.module.scss
+++ b/src/components/sort/sort.module.scss
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   padding: 17px;
-  z-index: -1;
 
   .typeSort {
     justify-self: start;
@@ -26,7 +25,6 @@
 
   .vectorSort {
     justify-self: end;
-    z-index: -1;
 
     .acitve::after {
       border-top-color: #724cf9;
